# bkp

./: .gitignore  Cargo.toml  README.md
bkp/: Cargo.toml
bkp/example/app1/: logs.txt
bkp/example/scripts/app1/: post_backup.sh
bkp/src/: actions.rs  backup.rs  cli.rs  compress.rs  config.rs  fs.rs  globalconfig.rs  main.rs  proc.rs  s3.rs  scripts.rs  time.rs
bkp/src/actions/: backup.rs
bkp/src/storage/: fs.rs  s3.rs
bkp/testdata/app1/: app1-utils.py
bkp/testdata/app1/subdir/: app1-subdir-file.py
bkp/testdata/config/: app1.toml
bkp/testdata/scripts/app1/: pre_backup.sh
example/: bkpconfig.toml
example/app1/: app1.py
example/config/: app1.toml  app2.toml  app3.toml
example/storage/: app1_local_full_2023-01-12T13:04:25.731760+00:00.tar
src/: actions.rs  backup.rs  cli.rs  compress.rs  config.rs  globalconfig.rs  logger.rs  main.rs  scripts.rs
src/storage/: fs.rs  s3.rs
